src/App.css
#root {
  width: 100%;
  display: flex;
  justify-content: center;
}

table.board {
  border-collapse: collapse;
}

tr {
  vertical-align: middle;
}

td.cell {
  background-color: gray;
  border: 1px rgb(48, 137, 121) solid;
  font-size: 26px;
  height: 40px;
  overflow: hidden;
  position: relative;
  text-align: center;
  vertical-align: middle;
  width: 40px;
}

td.cell-flagged {
  background-color: brown;
}

td .content-holder {
  left: 0;
}

td.cell-revealed .content-holder {
  align-items: center;
  animation-duration: 0.1s;
  animation-name: slidein;
  background-color: lightgray;
  display: flex;
  height: 100%;
  justify-content: center;
  position: absolute;
  top: 0;
  width: 100%;
}

td.cell-revealed-bomb .content-holder {
  background-color: aquamarine;
}

@keyframes slidein {
  from {
    top: -40px;
  }

  to {
    top: 0px;
  }
}

